Add engine component
